src/test/deca/context/valid/declare-float.deca
// Description:
//    Declare un float 
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    float i = 2.0;
}