src/test/deca/context/invalid/operation-binaire-equals-wrong.deca
// Description:
//    Test 3.33 fail avec equals
//
// Resultats:
//    Ligne 11: Equals ne s'utilise qu'avec des int, des float, des booléens ou des classes.
//
// Historique:
//    cree le 06/01/2023

{
    1 == "hello world";
}